updated some changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StudyAI - AI Student Assistant</title>
-    <meta name="description" content="Premium AI-powered study assistant for Indian college students. Chat with AI, manage calendar, track budget, and boost productivity." />
-    <meta name="author" content="StudyAI" />
+    <title>GenEWA(Efficient Workflow Access) - LOCK IN</title>
+    <meta name="description" content="GenEWA(Efficient Workflow Access): Premium AI-powered study assistant for Indian college students. Chat with AI, manage calendar, track budget, and boost productivity. LOCK IN to your success." />
+    <meta name="author" content="GenEWA" />
 
-    <meta property="og:title" content="StudyAI - AI Student Assistant" />
-    <meta property="og:description" content="Premium AI-powered study assistant for Indian college students" />
+    <meta property="og:title" content="GenEWA(Efficient Workflow Access) - LOCK IN" />
+    <meta property="og:description" content="GenEWA(Efficient Workflow Access): Premium AI-powered study assistant for Indian college students. LOCK IN to your success." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@studyai_app" />
+    <meta name="twitter:site" content="@genewa_app" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
